Fix media view sidebar spacing

--- a/mediacore/public/styles/base.css
+++ b/mediacore/public/styles/base.css
@@ -569,6 +569,7 @@ a:focus .grid-title {
 #media-sidebar {
 	position: relative;
 	z-index: 4;
+	float: right;
 }
 
 .mcore-playerbox {
